--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
       "@services/*": ["./src/services/*"],
       "@utils/*": ["./src/utils/*"],
       "@constants/*": ["./src/constants/*"],
-      "@store/*": ["./src/store/*"]
+      "@navigations/*": ["./src/navigations/*"],
+      "@assets/*": ["./src/assets/*"]
     }
   },
   "exclude": ["node_modules"]
