--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
   "eslint.validate": ["javascript", "javascriptreact", "typescript", "typescriptreact"],
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": true
+  },
+  "files.watcherExclude": {
+    "**/node_modules/**": false
+  },
+  "search.exclude": {
+    "**/node_modules": false
   }
 }
