--- a/package.json
+++ b/package.json
@@ -13,10 +13,9 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
-    "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
-    "expo-status-bar": "^1.0.2",
-    "firebase": "^7.20.0",
+    "expo-status-bar": "^1.0.0",
+    "firebase": "7.9.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
@@ -24,6 +23,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
