gradient list page with minor refactoring

--- a/app.json
+++ b/app.json
@@ -18,6 +18,9 @@
     "ios": {
       "supportsTablet": false
     },
+    "android": {
+      "softwareKeyboardLayoutMode": "pan"
+    },
     "web": {
       "favicon": "./src/assets/images/favicon.png"
     }
