--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-clone-referenced-element|@react-native-community|expo(nent)?|@expo(nent)?/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|@sentry/.*)"
+    ]
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -13,6 +20,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "~38.0.8",
+    "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
     "expo-status-bar": "^1.0.0",
@@ -38,7 +46,9 @@
     "eslint": "^7.9.0",
     "eslint-config-universe": "^4.0.0",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "jest-expo": "^39.0.0",
     "prettier": "^2.1.2",
+    "react-test-renderer": "^16.13.1",
     "typescript": "~3.9.5"
   },
   "private": true
