--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "react-native-screens": "~2.9.0",
     "react-native-size-matters": "^0.3.1",
     "react-native-svg": "12.1.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "validator": "^13.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
     "babel-plugin-module-resolver": "^4.0.0",
