--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     ]
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "@yatiac/name-that-color": "^1.1.0",
+    "color-convert": "^2.0.1",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-linear-gradient": "~8.2.1",
+    "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "7.9.0",
     "react": "~16.11.0",
@@ -35,12 +39,17 @@
     "react-native-size-matters": "^0.3.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "validator": "^13.1.17"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
+    "@types/color-convert": "^1.9.0",
     "@types/react": "~16.9.41",
     "@types/react-native": "~0.62.13",
+    "@types/react-redux": "^7.1.9",
     "@types/validator": "^13.1.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
@@ -51,6 +60,7 @@
     "jest-expo": "^39.0.0",
     "prettier": "^2.1.2",
     "react-test-renderer": "^16.13.1",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "~3.9.5"
   },
   "private": true
