--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,9 @@
       "@constants/*": ["./src/constants/*"],
       "@navigations/*": ["./src/navigations/*"],
       "@assets/*": ["./src/assets/*"],
-      "@typeDefs/*": ["./src/types/*"]
+      "@typeDefs/*": ["./src/types/*"],
+      "@models/*": ["./src/models/*"],
+      "@store/*": ["./src/store/*"]
     }
   },
   "exclude": ["node_modules"]
