--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "color-convert": "^2.0.1",
     "expo": "~38.0.8",
     "expo-constants": "~9.1.1",
+    "expo-file-system": "~9.0.1",
     "expo-font": "~8.2.1",
+    "expo-image-manipulator": "~8.2.1",
+    "expo-image-picker": "~8.3.0",
     "expo-linear-gradient": "~8.2.1",
     "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.0",
@@ -39,6 +42,7 @@
     "react-native-size-matters": "^0.3.1",
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
+    "react-native-webview": "9.4.0",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
