--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-color-picker": "^0.6.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
@@ -43,6 +44,7 @@
     "react-native-svg": "12.1.0",
     "react-native-web": "~0.11.7",
     "react-native-webview": "9.4.0",
+    "react-navigation-header-buttons": "^5.0.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
